--- a/animes.css
+++ b/animes.css
@@ -16,6 +16,21 @@ body{
     padding-top: 1000px;
     width: auto;
 }
+.carousel{
+ display:flex;
+ overflow: hidden;
+}
+.carousel img{
+ max-width: 100%;
+ height:auto;
+ transition: transform 0.3s;
+}
+@media (max-widht: 768px){
+ .carousel{
+  flex-direction: column;
+  align-items: center;
+ }
+}
 .menu{
     padding-top: 15px;
     margin-block-start: auto;
@@ -24,9 +39,9 @@ body{
 img{
     padding-top: 12px;
     width: 800px;
-    height: 500px;
-    text-align: center;
-    margin-left: 300px;
+    height: 400px;
+    text-align: -webkit-auto;
+    margin-left: auto;
 }
 :root{
    --cor-de-fundo:#000;
